...
                imageVector = Icons.Rounded.Search,
                contentDescription = stringResource(id = R.string.cd_icon_search),
                modifier = modifier
                    .clickable {
                        onSubmit()
                    }
                    .testTag("icon_search")
            )
        },
        singleLine = true,
        shape = Shapes.medium,
        colors = TextFieldDefaults.textFieldColors(
            containerColor = Color.White,
...
        },
        modifier = modifier
            .fillMaxWidth()
            .heightIn(min = 30.dp)
            .padding(horizontal = 16.dp)
            .shadow(4.dp)
            .testTag("textfield_search")
    )
}
