...
                            } else {
                                showToast(
                                    context = context,
                                    message = R.string.removed_from_favorite
                                )
                            }
                        }, modifier = Modifier.testTag("favorite_button")
                        ) {
                            if (data.isFavorite) {
                                Icon(
                                    painter = painterResource(id = R.drawable.ic_favorite_filled),
                                    contentDescription = stringResource(id = R.string.cd_icon_fav_filled),
                                    tint = Color.White
...
                    modifier = Modifier
                        .padding(16.dp)
                        .clickable { onBackClick() }
                        .clip(RoundedCornerShape(size = 8.dp))
                        .background(color = Color.White)
                        .padding(8.dp)
                        .testTag("back_button")

                )
            }

            Text(
                text = stringResource(id = R.string.title_synopsis),
...
