...
            ),
            verticalArrangement = Arrangement.spacedBy(16.dp),
            modifier = Modifier
                .fillMaxSize()
                .padding(16.dp)
                .align(Alignment.CenterHorizontally)
                .testTag("lvg_movie")
        ) {
            items(movies, key = { it.id }) {
                MovieItem(
                    image = it.posterPath,
                    title = it.title,
                    release = it.releaseDate,
...
